# python_population

./: .env  .gitignore  Population Statistics_Obligatorisk.docx  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py  requirements.txt
frontend/: Dockerfile  app.py  countries.txt
frontend/pages/: data_analasis.py  llm_insight.py  population_comparison.py
frontend/utils/: api_client.py  chart.py  countries.py
tests/: test_api_client.py  test_backend.py  test_countries.py
